--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,17 @@
   {% include head.html %}
 
   <body>
+    <div class="big-wrap">
+      {% include header.html %}
 
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+      <div class="page-content">
+        <div class="wrapper">
+          {{ content }}
+        </div>
       </div>
+
+      {% include footer.html %}
     </div>
-
-    {% include footer.html %}
-
   </body>
 
 </html>
