--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   {% include head.html %}
 
   <body>
+    {% include svg_sprite.html %}
     <div class="big-wrap">
       {% include header.html %}
 
