--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
 
-<p></p>
+<p class="colophon">Made with <img src="/uploads/tears.png" alt=""> in D.C.</p>
 
 </footer>
