--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -35,8 +35,11 @@
   }
 }
 // 🎌The Footer🎌
-.colophon img{
+.colophon{
+  text-align: center;
+   img{
   height: 2rem;
   position: relative;
   top: 10px;
+  }
 }
