--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -87,3 +87,4 @@ $cols16: (16 * ($column + $gutter) - $gutter) / $em;
                 1px 0px 0px $bgcolor,
                 2px 0px 0px $bgcolor;
 }
+$links: #177aa6;
