--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -87,4 +87,10 @@ $cols16: (16 * ($column + $gutter) - $gutter) / $em;
                 1px 0px 0px $bgcolor,
                 2px 0px 0px $bgcolor;
 }
-$links: #177aa6;
+
+// 🎌Color Variables🎌
+
+$blue: #177aa6;
+$yellow: #a7a05e;
+$red: #a24249;
+$gray: #a0a1b3;
