--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -34,7 +34,7 @@ $ultra-wide: 67rem;
   }
 }
 
-// 🎌 Grid Settings evolved from Frameless Grids 🎌
+// 🎌 Grid Settings evolved from Frameless Grids, see http://www.jonikorpi.com/frameless/ for more background 🎌
 
 $font-size: 16px; 		// Your base font-size in pixels
 $em: $font-size / 1em;	// Shorthand for outputting ems
