--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -34,6 +34,15 @@
     margin-right: 1rem;
   }
 }
+// 🎌Content🎌
+.more{
+  text-align: right;
+}
+.more--icon{
+  height: 1rem;
+  position: relative;
+  top: .1rem;
+}
 // 🎌The Footer🎌
 .colophon{
   text-align: center;
