--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,5 +8,5 @@
       {% endfor %}
     </ul>
   </nav>
-  <h1 class="page-title"><a class="site-title without-underline" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+  <h1 class="page-title"><a class="site-title without-underline" href="{{ site.baseurl }}/">{{ site.title }}<span>Two great tasts that taste great together.</span></a></h1>
 </header>
