--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,9 @@
 ---
 ---
-
 @import "bourbon/bourbon";
-@import "syntax";
 @import "variables";
+@import "syntax";
+@import "superfluous-animation";
 @import "normalize";
 @import "typesetting";
 @import "layout";
