--- a/_sass/typesetting.scss
+++ b/_sass/typesetting.scss
@@ -7,30 +7,37 @@ body{
 .wf-inactive body{
   visibility: visible;
   font-family: 'Merriweather', Georgia, serif;
+  .page-title{
+    font-family: 'Merriweather', Georgia, serif;
+  }
   h1, h2, h3, h4{
-    font-family: 'Archivo Narrow', Georgia, sans-serif;
+    font-family: 'Archivo Narrow', helvetica, sans-serif;
   }
 }
 .wf-active body{
   visibility: visible;
   font-family: 'Merriweather', Georgia, serif;
-    h2, h3, h4{
-    font-family: 'Archivo Narrow', Georgia, sans-serif;
+  .page-title{
+    font-family: 'Merriweather', Georgia, serif;
+  }
+  h1, h2, h3, h4{
+    font-family: 'Archivo Narrow', helvetica, sans-serif;
   }
 }
 .svg{
   fill: currentColor;
 }
 nav a{
-  font-family: 'Archivo Narrow', Georgia, sans-serif;
+  font-family: 'Archivo Narrow', helvetica, sans-serif;
 }
 nav a:hover{
-  border-bottom: 2px solid $blue;
+  border-bottom: 2px solid darken($blue, 10%);
 }
 .page-title{
   display: block;
   margin: 2rem auto;
   text-align: center;
+  font-family: 'Merriweather', Georgia, serif;
   font-size: 1.6rem;
   letter-spacing: .05em;
   text-shadow: 2px 2px 0px $red, 3.5px 3.5px 0px rgba(0, 0, 0, 0.2);
@@ -57,6 +64,9 @@ nav a:hover{
   a{
     color: white;
   }
+  a:hover{
+    color: white;
+  }
 }
 .highlighter-rouge{
   background-color: #2C3644;
@@ -78,10 +88,10 @@ hr{
 .post-details{
   font-family: 'Archivo Narrow', Georgia, sans-serif;
   span{
-    padding: .2rem .4rem;
+    padding: .15rem .3rem;
     background-color: $red;
     color: white;
-    border-radius: .1rem;
+    border-radius: .2rem;
     margin-right: .5rem;
   }
 }
