--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,5 +8,5 @@
       {% endfor %}
     </ul>
   </nav>
-  <h1 class="page-title animated zoomInDown"><a class="site-title without-underline link link--surinami" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+  <h1 class="page-title {% if page.title == 'Home' %}animated zoomInDown{% endif %}"><a class="site-title without-underline" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
 </header>
