--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -52,3 +52,27 @@
   top: 10px;
   }
 }
+// 🎌Pagination🎌
+.pagination{
+  margin: 2rem auto;
+  font-family: 'Archivo Narrow';
+  span, a{
+    display: inline-block;
+    padding: 1rem 3rem;
+    border: 2px solid $red;
+    text-align: center;
+    text-decoration: none;
+    border-radius: .2rem;
+  }
+}
+.previous{
+float: right;
+}
+.next{
+  float: left;
+}
+.page_number{
+  text-align: center;
+  margin-top: .5rem;
+  font-family: 'Archivo Narrow';
+}
