--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -87,3 +87,10 @@ float: right;
   margin-top: .5rem;
   font-family: 'Archivo Narrow';
 }
+// 🎌Footer🎌
+
+footer{
+  margin-top: 1rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
