--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,8 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    <p class="post-details">Topics:
+    {% for topic in page.topics %}<span class="post-topic">{{ topic | capitalize }}</span>{% endfor %}</p>
   </header>
 
   <article class="post-content">
